Implemented search filters in chart and created endpoint to search templates.
