# docs/swagger.yaml
@@ -581,29 +581,6 @@ definitions:
       updated_by_id:
         type: integer
     type: object
-  organisation.orgWithPermissions:
-    properties:
-      created_at:
-        type: string
-      created_by_id:
-        type: integer
-      deleted_at:
-        type: string
-      description:
-        type: string
-      id:
-        type: integer
-      permission:
-        $ref: '#/definitions/model.OrganisationPermission'
-      slug:
-        type: string
-      title:
-        type: string
-      updated_at:
-        type: string
-      updated_by_id:
-        type: integer
-    type: object
   organisation.organisationPermission:
     properties:
       organisation_id:
@@ -631,7 +608,7 @@ definitions:
     properties:
       nodes:
         items:
-          $ref: '#/definitions/organisation.orgWithPermissions'
+          $ref: '#/definitions/model.OrganisationPermissionRequest'
         type: array
       total:
         type: integer
@@ -874,6 +851,15 @@ definitions:
     required:
     - name
     - slug
+    type: object
+  template.paging:
+    properties:
+      nodes:
+        items:
+          $ref: '#/definitions/model.Template'
+        type: array
+      total:
+        type: integer
     type: object
   template.template:
     properties:
@@ -1123,6 +1109,22 @@ paths:
         in: query
         name: page
         type: string
+      - description: category
+        in: query
+        name: category
+        type: string
+      - description: tag
+        in: query
+        name: tag
+        type: string
+      - description: status
+        in: query
+        name: status
+        type: string
+      - description: search query
+        in: query
+        name: q
+        type: string
       produces:
       - application/json
       responses:
@@ -1204,8 +1206,8 @@ paths:
       tags:
       - Chart
     get:
-      description: Get chart by ID
-      operationId: get-chart-by-id
+      description: Get spec chart by ID
+      operationId: get-chart-spec-by-id
       parameters:
       - description: User ID
         in: header
@@ -1229,7 +1231,7 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/model.Chart'
-      summary: Show a chart by id
+      summary: Show a spec chart by id
       tags:
       - Chart
     put:
@@ -2987,6 +2989,49 @@ paths:
           schema:
             $ref: '#/definitions/model.Template'
       summary: Update a template by id
+      tags:
+      - Template
+  /templates/search:
+    get:
+      description: Search all templates
+      operationId: search-all-templates
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Space ID
+        in: header
+        name: X-Space
+        required: true
+        type: string
+      - description: limit per page
+        in: query
+        name: limit
+        type: string
+      - description: page number
+        in: query
+        name: page
+        type: string
+      - description: category
+        in: query
+        name: category
+        type: string
+      - description: search query
+        in: query
+        name: q
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/template.paging'
+            type: array
+      summary: Search in all templates
       tags:
       - Template
   /themes:
